--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ import(caret)
 import(dplyr)
 import(forecast)
 import(forecastML)
+import(lifecycle)
 import(lubridate)
 import(tseries)
 importFrom(doParallel,registerDoParallel)
