--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,37 +1,39 @@
 Package: caretForecast
 Title: Time series forecasting using caret infrastructure
-Version: 0.0.2
+Version: 0.1.0
 Authors@R: 
     person(given = "Resul",
            family = "Akay",
            role = c("aut", "cre"),
            email = "resulakay1@gmail.com")
-Description: This package allows users to forecast time series using caret 
-             infrastructure. The user can use any regression model for 
-             model fitting.
-License: Apache License (>= 2.0)
+Description: This package allows users to forecast time
+    series using caret infrastructure. The user can use any regression
+    model for model fitting.
+License: GPL-3
+URL: https://github.com/Akai01/caretForecast
+BugReports: https://github.com/Akai01/caretForecast/issues
+Depends: 
+    R (>= 3.2.0)
+Imports: 
+    caret (>= 6.0.86),
+    doParallel (>= 1.0.15),
+    dplyr (>= 1.0.2),
+    forecast (>= 8.12),
+    forecastML (>= 0.9.0),
+    lifecycle (>= 0.2.0),
+    lubridate (>= 1.7.9),
+    methods,
+    parallel,
+    stats,
+    tseries (>= 0.10.47)
+Suggests: 
+    knitr (>= 1.29),
+    testthat (>= 2.3.2)
+VignetteBuilder: 
+    knitr
+RdMacros: 
+    lifecycle
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Suggests: 
-    testthat (>= 2.3.2),
-    knitr (>= 1.29)
-Imports: 
-    forecast (>= 8.12),
-    caret (>= 6.0.86),
-    forecastML (>= 0.9.0),
-    lifecycle (>= 0.2.0),
-    dplyr (>= 1.0.2),
-    tseries (>= 0.10.47),
-    lubridate (>= 1.7.9),
-    parallel,
-    doParallel (>= 1.0.15),
-    methods,
-    stats
-RdMacros: lifecycle
-Depends: 
-    R (>= 3.2.0)
-VignetteBuilder: knitr
-URL: https://github.com/Akai01/caretForecast
-BugReports: https://github.com/Akai01/caretForecast/issues
