--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
-.Rproj.user
 .Rhistory
+.Rapp.history.RData.Ruserdata
+*-Ex.R/*.tar.gz/*.Rcheck/.Rproj.user/
+vignettes/*.html
+vignettes/*.pdf
+.httr-oauth
+*_cache/
+/cache/
+*.utf8.md
+*.knit.md
+.Renviron
+docs/
+po/*~
+.Rapp.history
 .RData
 .Ruserdata
-inst/doc
+*-Ex.R
+/*.tar.gz
+/*.Rcheck/
+.Rproj.user/
+.DS_Store
