--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: caretForecast
-Title: Time series forecasting using caret infrastructure
+Title: Time Series Forecasting Using Caret Infrastructure
 Version: 0.1.0
 Authors@R: 
     person(given = "Resul",
