--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(ARml)
 export(ARml_grouped)
 export(fc_plot)
 export(get_var_imp)
+export(split_ts)
 export(suggested_methods)
 export(ts_plot)
 import(caret)
