--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Description: This package allows users to forecast time
     series using caret infrastructure. The user can use any regression
     model for model fitting.
 License: GPL-3
-URL: https://github.com/Akai01/caretForecast
+URL: https://akai01.github.io/caretForecast/, https://github.com/Akai01/caretForecast
 BugReports: https://github.com/Akai01/caretForecast/issues
 Depends: 
     R (>= 3.2.0)
