--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -9,6 +9,9 @@ development:
 template:
   bootswatch: spacelab
 
+news:
+- title: The news
+  contents: '`index`'
 
 reference:
 - title: All functions
