--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,39 +1,30 @@
 Package: caretForecast
 Title: Time Series Forecasting Using Caret Infrastructure
-Version: 0.1.0
+Version: 0.0.1.9001
 Authors@R: 
     person(given = "Resul",
            family = "Akay",
            role = c("aut", "cre"),
            email = "resulakay1@gmail.com")
-Description: This package allows users to forecast time
-    series using caret infrastructure. The user can use any regression
-    model for model fitting.
+Description: This package allows users to forecast univariate time
+    series using caret infrastructure. The user can use any caret package 
+    supported regression model for fitting a model.
 License: GPL-3
 URL: https://akai01.github.io/caretForecast/, https://github.com/Akai01/caretForecast
 BugReports: https://github.com/Akai01/caretForecast/issues
 Depends: 
     R (>= 3.2.0)
-Imports: 
-    caret (>= 6.0.86),
-    doParallel (>= 1.0.15),
-    dplyr (>= 1.0.2),
-    forecast (>= 8.12),
-    forecastML (>= 0.9.0),
-    lifecycle (>= 0.2.0),
-    lubridate (>= 1.7.9),
-    methods,
-    parallel,
-    stats,
-    tseries (>= 0.10.47)
+Imports:
+    forecast (>= 8.15),
+    caret (>= 6.0.88),
+    magrittr (>= 2.0.1),
+    methods (>= 4.1.1)
 Suggests: 
     knitr (>= 1.29),
     testthat (>= 2.3.2)
 VignetteBuilder: 
     knitr
-RdMacros: 
-    lifecycle
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
