--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,21 +9,30 @@ Authors@R:
 Description: Recursive time series forecast using Caret infrastructure. 
     The models are selected based on time series cross-validation and 
     forecasting is done recursively.
-License: GPL-3
+License: MIT + file LICENSE
 URL: https://github.com/Akai01/caretForecast
 BugReports: https://github.com/Akai01/caretForecast/issues
 Depends: 
-    R (>= 3.2.0)
+    fabletools (>= 0.3.2),
+    R (>= 3.6)
 Imports:
-    forecast (>= 8.15),
     caret (>= 6.0.88),
+    distributional (>= 0.3.0),
+    dplyr (>= 1.0.8),
+    forecast (>= 8.16),
+    lifecycle,
     magrittr (>= 2.0.1),
-    methods (>= 4.1.1)
+    methods (>= 4.1.1),
+    purrr (>= 0.3.4),
+    rlang (>= 1.0.2),
+    tsibble (>= 1.1.1)
 Suggests: 
     Cubist (>= 0.3.0),
     knitr (>= 1.29),
+    rmarkdown,
     testthat (>= 2.3.2)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+VignetteBuilder: knitr
