--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,13 +16,14 @@ Depends:
     fabletools (>= 0.3.2),
     R (>= 3.6)
 Imports:
-    caret (>= 6.0.88),
+    caret (>= 6.0.90),
     distributional (>= 0.3.0),
     dplyr (>= 1.0.8),
     forecast (>= 8.16),
+    generics (>= 0.1.2),
     lifecycle,
-    magrittr (>= 2.0.1),
-    methods (>= 4.1.1),
+    magrittr (>= 2.0.2),
+    methods (>= 4.1.3),
     purrr (>= 0.3.4),
     rlang (>= 1.0.2),
     tsibble (>= 1.1.1)
