--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,6 @@ export("%<>%")
 export("%>%")
 export(ARml)
 export(CARET)
-export(accuracy)
-export(autolayer)
-export(autoplot)
 export(get_var_imp)
 export(split_ts)
 export(suggested_methods)
@@ -27,13 +24,11 @@ importFrom(fabletools,new_specials)
 importFrom(forecast,BoxCox)
 importFrom(forecast,BoxCox.lambda)
 importFrom(forecast,InvBoxCox)
-importFrom(forecast,accuracy)
-importFrom(forecast,autolayer)
-importFrom(forecast,autoplot)
 importFrom(forecast,bld.mbb.bootstrap)
 importFrom(forecast,fourier)
 importFrom(forecast,is.constant)
 importFrom(forecast,na.interp)
+importFrom(lifecycle,badge)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
