--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: caretForecast
 Title: Time Series Forecasting Using Caret Infrastructure
-Version: 0.0.2
+Version: 0.0.3
 Authors@R: 
     person(given = "Resul",
            family = "Akay",
@@ -9,7 +9,7 @@ Authors@R:
 Description: Recursive time series forecast using Caret infrastructure. 
     The models are selected based on time series cross-validation and 
     forecasting is done recursively.
-License: GPL-3
+License: GPL (>= 3)
 URL: https://github.com/Akai01/caretForecast
 BugReports: https://github.com/Akai01/caretForecast/issues
 Depends: 
