--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ importFrom(rlang,get_env)
 importFrom(rlang,is_empty)
 importFrom(rlang,new_formula)
 importFrom(stats,"tsp<-")
+importFrom(stats,fitted)
 importFrom(stats,frequency)
 importFrom(stats,is.ts)
 importFrom(stats,predict)
