--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,9 @@ export("%<>%")
 export("%>%")
 export(ARml)
 export(CARET)
+export(accuracy)
+export(autolayer)
+export(autoplot)
 export(get_var_imp)
 export(split_ts)
 export(suggested_methods)
@@ -25,6 +28,9 @@ importFrom(fabletools,new_specials)
 importFrom(forecast,BoxCox)
 importFrom(forecast,BoxCox.lambda)
 importFrom(forecast,InvBoxCox)
+importFrom(forecast,accuracy)
+importFrom(forecast,autolayer)
+importFrom(forecast,autoplot)
 importFrom(forecast,bld.mbb.bootstrap)
 importFrom(forecast,fourier)
 importFrom(forecast,is.constant)
