--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,24 +1,28 @@
 Package: caretForecast
-Title: Time Series Forecasting Using Caret Infrastructure
-Version: 0.0.3
+Title: Conformal Time Series Forecasting Using State of Art Machine Learning Algorithms
+Version: 0.1.1
 Authors@R: 
     person(given = "Resul",
            family = "Akay",
            role = c("aut", "cre"),
            email = "resulakay1@gmail.com")
-Description: Recursive time series forecast using Caret infrastructure. 
-    The models are selected based on time series cross-validation and 
-    forecasting is done recursively.
+Description: The caretForecast package makes it easy to create conformal time 
+  series forecasts using the caret infrastructure. The primary function ARml 
+  provides access to state-of-the-art machine learning models for forecasting 
+  applications. The hyperparameter of each model is selected based on time series
+  cross-validation, and forecasting is done recursively.
 License: GPL (>= 3)
 URL: https://github.com/Akai01/caretForecast
 BugReports: https://github.com/Akai01/caretForecast/issues
 Depends: 
-    R (>= 3.2.0)
+    R (>= 3.6)
 Imports:
     forecast (>= 8.15),
     caret (>= 6.0.88),
     magrittr (>= 2.0.1),
-    methods (>= 4.1.1)
+    methods (>= 4.1.1),
+    dplyr (>= 1.0.9),
+    generics (>= 0.1.3)
 Suggests: 
     Cubist (>= 0.3.0),
     knitr (>= 1.29),
@@ -26,4 +30,4 @@ Suggests:
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.1
