[Fix] Horizon-specific conformal prediction with proper out-of-sample calibration. Fix #1

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(forecast,ARml)
 S3method(predict,conformalRegressor)
+S3method(predict,conformalRegressorByHorizon)
 S3method(residuals,ARml)
 export("%<>%")
 export("%>%")
@@ -10,6 +11,7 @@ export(accuracy)
 export(autolayer)
 export(autoplot)
 export(conformalRegressor)
+export(conformalRegressorByHorizon)
 export(forecast)
 export(get_var_imp)
 export(split_ts)
