--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Description: Conformal time series forecasting using the caret infrastructure.
   applications. The hyperparameter of each model is selected based on time 
   series cross-validation, and forecasting is done recursively.
 License: GPL (>= 3)
-URL: https://github.com/Akai01/caretForecast
+URL: https://akai01.github.io/caretForecast/, https://github.com/Akai01/caretForecast
 BugReports: https://github.com/Akai01/caretForecast/issues
 Depends: 
     R (>= 3.6)
