[Release] Increment version number to 0.1.3

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -95,4 +95,4 @@ footer:
     left: tafs
     right: built_with
   components:
-    tafs: "Developed by [Time Series Analysis and Forecasting](https://taf-society.org/)"
+    tafs: "Developed by [Time Series Analysis and Forecasting Society](https://taf-society.org/)"
